// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboardPanel > renders with body slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6">Body slot</div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with class correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1 lg:border-none">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with default slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">Default slot</div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with defaultSize correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 w-full lg:w-$width" style="--width: 50%;">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with footer slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6"></div>Footer slot
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with header slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">Header slot<div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with id correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-test" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with maxSize correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with minSize correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with resizable correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6"></div>
  </div>
  <div role="separator" class="hidden cursor-ew-resize select-none relative touch-none lg:block before:content-empty before:inset-y-0 before:absolute before:z-1 before:-left-1.5 before:-right-1.5" aria-controls="dashboard-panel-v-0" data-slot="handle"></div>
</div>"
`;

exports[`dashboardPanel > renders with resize-handle slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6"></div>
  </div>Resize handle slot
</div>"
`;

exports[`dashboardPanel > renders with ui correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-slot="root" data-dragging="false" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-border shrink-0 flex-1">
    <div data-slot="body" class="p-4 flex flex-1 flex-col gap-4 overflow-y-auto sm:p-6 sm:gap-6 p-8"></div>
  </div>
  <!--v-if-->
</div>"
`;
